--- a/games/chess-cli/deno.json
+++ b/games/chess-cli/deno.json
@@ -1,8 +1,11 @@
 {
   "tasks": {
-    "dev": "deno run --watch main.js"
+    "start": "deno run -A main.js",
+    "test": "deno test -A",
+    "test:coverage": "deno test -A --coverage && deno coverage" 
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@1"
+    "@std/assert": "jsr:@std/assert@1",
+    "@std/testing": "jsr:@std/testing@^1.0.16"
   }
 }
